# rpi4-status-display

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  setup-build-opts.cmake  setup-compiler.cmake  setup-options.cmake
.github/workflows/: build_and_test.yml
src/: Program.cpp  Program.h  main.cpp  src.cmake
src/Graphics/: Color.cpp  Color.h  Framebuffer.cpp  Framebuffer.h  Line2D.cpp  Line2D.h  Point2D.cpp  Point2D.h  Rect2D.cpp  Rect2D.h  Size2D.cpp  Size2D.h
src/Graphics/Renderer/: AbstractFramebufferRenderer.cpp  AbstractFramebufferRenderer.h  RendererInterface.h  SdlRenderer.cpp  SdlRenderer.h
tests/: main.cpp  tests.cmake
tests/Graphics/: Color.cpp  Framebuffer.cpp  Line2D.cpp  Point2D.cpp  Rect2D.cpp  Size2D.cpp
tests/Graphics/Renderer/: AbstractFramebufferRenderer.cpp  SdlRenderer.cpp
tools/cmake_support/: lcov.sh
